--- a/frontuiwithreact/public/index.html
+++ b/frontuiwithreact/public/index.html
@@ -97,6 +97,29 @@
             display: "inline-block",
           });
         });
+
+        $(document).on("click", ".editAchi", function () {
+          // console.log($(this).parent().siblings().text());
+          $(this)
+            .parent()
+            .siblings()
+            .each(function () {
+              var content = $(this).text();
+              console.log($(this).children().remove());
+              $(this).append(
+                `<input class='edit__achi__input' value='${content}'/>`
+              );
+            });
+          $(this).siblings(".saveAchi").css({
+            display: "inline-block",
+          });
+          $(this).siblings(".deleteAchi").css({
+            display: "none",
+          });
+          $(this).css({
+            display: "none",
+          });
+        });
       });
     </script>
   </body>
